[package]
name = "theme-dioxus-example"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }
theme = { path = "../../", features = ["dio"] }
dioxus-logger = "0.6.2"
maplit = "1.0.2"
table-rs = { version = "0.0.3", features = ["dio"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
