[package]
name = "theme-yew-example"
version = "0.1.0"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
theme = { path = "../../", features = ["yew"] }
console_error_panic_hook = "0.1.7"
log = "0.4.22"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"], default-features = false }
yew-router = { version = "0.18.0", default-features = false }
sidebar = { version = "0.0.1", features = ["yew"] }
table-rs = { version = "0.0.3", features = ["yew"] }
maplit = "1.0.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
